added related file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
     <div class="header">
         <div><h1>My Library</h1></div>
+        <div class="bookbtn"><input type="button" value="Add Book" /></div>
     </div>
     <main class='container'>
-        <div class="books">
+        <div class="books" id="books">
         </div>
     </main>
 </body>
