--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
         <div><h1>My Library</h1></div>
         <div class="bookbtn"><input type="button" value="Add Book" /></div>
     </div>
+    <div class="addform">
+        <form id="bookform">
+            <h3>Book Name</h3>
+            <input type="text" id="bookname" value=""/>
+            <h3>Author Name</h3>
+            <input type="text" id="bookname" value=""/>
+            <h3>Page Number</h3>
+            <input type="text" id="bookname" value=""/>
+            <h3>Have you read it?</h3>
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider round" id="read"></span>
+            </label>
+        </form>
+    </div>
     <main class='container'>
         <div class="books" id="books">
         </div>
